src/objects/CP_Application_Request__c.object
<CustomObject>
    <fields>
        <fullName>Fraud_Decision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Decision Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fraud_Decision__c</fullName>
        <label>Fraud Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fraud_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud_Recommendation__c</fullName>
        <label>Fraud Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend Approve</fullName>
                </value>
                <value>
                    <fullName>Recommend Review</fullName>
                </value>
                <value>
                    <fullName>Recommend Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIACT_Account_Response_Code_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Account Response Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Account_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Account Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Account_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Account Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GIACT_Check__c</fullName>
        <label>GIACT Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIACT_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_BIID_Score__c</fullName>
        <label>Lexis Nexis BIID Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_CVI_Score__c</fullName>
        <label>Lexis Nexis CVI Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GIACT_Customer_Response_Code_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Customer Response Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Customer_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Customer Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Customer_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Customer Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GIACT_Verify_Response_Code_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Verify Response Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Global Ultimate DUNS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Country__c</fullName>
        <label>Guarantor Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_Date_of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Mobile_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Phone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Residential_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Residential Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Residential_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Residential_Country__c</fullName>
        <defaultValue>(&quot;United States&quot;)</defaultValue>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_Residential_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Residential_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Residential_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Guarantor_State_Province__c</fullName>
        <label>State / Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Guarantor_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>NB</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>NU</fullName>
                </value>
                <value>
                    <fullName>ON</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>QC</fullName>
                </value>
                <value>
                    <fullName>SK</fullName>
                </value>
                <value>
                    <fullName>YT</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Progress_User__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In Progress User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Address_High_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fraud Indicator returned from Experian</inlineHelpText>
        <label>Inquiry Address High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Structure__c</fullName>
        <label>Legal Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank/Bank Holding Co/Credit Union</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Corporation/Association</fullName>
                </value>
                <value>
                    <fullName>Federal/State/Local Government Agency or Authority</fullName>
                </value>
                <value>
                    <fullName>Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Investment Company/Adviser</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Non-Statutory Trust</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Public Accounting Firm</fullName>
                </value>
                <value>
                    <fullName>Public Company and Majority Owned Affiliate</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Unincorporated Association</fullName>
                </value>
                <value>
                    <fullName>Natural Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_BIID_Result__c</fullName>
        <label>Lexis Nexis BIID Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_IID_Result__c</fullName>
        <label>Lexis Nexis IID Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_FraudPoint_Result__c</fullName>
        <label>Lexis Nexis FraudPoint Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_Check__c</fullName>
        <label>Lexis Nexis Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_Custom_Model_Score__c</fullName>
        <label>Lexis Nexis Custom Model Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_FraudPoint_Score__c</fullName>
        <label>Lexis Nexis FraudPoint Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Check__c</fullName>
        <label>Location Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_if_different_from_Physi__c</fullName>
        <formula>Mailing_Address_Line_1__c &amp; Mailing_Address_Line_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address (if different from Physi</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City_if_different_from_Physical__c</fullName>
        <formula>Mailing_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City (if different from Physical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Country_if_different_from_Physic__c</fullName>
        <formula>TEXT(Mailing_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country if different from Physic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code_if_different_from__c</fullName>
        <formula>Mailing_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Postal Code  (if different from</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <label>State / Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mailing_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_State_if_different_from_Physica__c</fullName>
        <formula>TEXT( Mailing_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State (if different from Physica</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National__c</fullName>
        <formula>TEXT(Account__r.National_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Cards__c</fullName>
        <label>Number of Cards</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Existing_Accounts__c</fullName>
        <label>Number of Existing Accounts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Existing_Applications__c</fullName>
        <label>Number of Existing Applications</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments_Negative__c</fullName>
        <label># of Payments Negative</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments_Slow__c</fullName>
        <label># of Payments Slow</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_File_Address_High_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fraud Indicator returned from Experian</inlineHelpText>
        <label>On File Address High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CorporatePayments Application Requests</relationshipLabel>
        <relationshipName>CorporatePayments_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Data__c</fullName>
        <description>All data from the Experian response, save the FICO score, is not currently being used and thus being stored all together here.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PG Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PG_FICO_Score__c</fullName>
        <label>PG FICO Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PG_High_Credit_Amount__c</fullName>
        <label>PG High Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PG_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <description>Updated from the associated Partner record (Partner Email) when the app request is edited</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Passed_Forte_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed Forte Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paydex__c</fullName>
        <label>Paydex</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <label>Payment Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Billing_Cycle__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>6th</fullName>
                </value>
                <value>
                    <fullName>7th</fullName>
                </value>
                <value>
                    <fullName>8th</fullName>
                </value>
                <value>
                    <fullName>9th</fullName>
                </value>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>11th</fullName>
                </value>
                <value>
                    <fullName>12th</fullName>
                </value>
                <value>
                    <fullName>13th</fullName>
                </value>
                <value>
                    <fullName>14th</fullName>
                </value>
                <value>
                    <fullName>15th</fullName>
                </value>
                <value>
                    <fullName>16th</fullName>
                </value>
                <value>
                    <fullName>17th</fullName>
                </value>
                <value>
                    <fullName>18th</fullName>
                </value>
                <value>
                    <fullName>19th</fullName>
                </value>
                <value>
                    <fullName>20th</fullName>
                </value>
                <value>
                    <fullName>21st</fullName>
                </value>
                <value>
                    <fullName>22nd</fullName>
                </value>
                <value>
                    <fullName>23rd</fullName>
                </value>
                <value>
                    <fullName>24th</fullName>
                </value>
                <value>
                    <fullName>25th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type_Code__c</fullName>
        <formula>CASE(Payment_Type__c, 

&quot;Credit ACH&quot;, &quot;EC&quot;, 
&quot;Debit ACH&quot;, &quot;ET&quot;,
&quot;ET&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Billing_Cycle__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ET</fullName>
                    <default>true</default>
                    <label>Debit ACH</label>
                </value>
                <value>
                    <fullName>CT</fullName>
                    <label>Credit ACH</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>